NewArchive/c6a26c6e92bff998a63309a7703d1e09-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:9: error: expected unqualified-id before ‘if’
         if(CadastroAlunos[k][2] == NumeroCursoPesquisa){
         ^
